cloud-infra-macros/tests/fails/maximum_message_size_boundary_high.rs
use cloud_infra_macros::maximum_message_size;

fn example() {
    let size = maximum_message_size!(1048577);
}

fn main() {}