cloud-infra-macros/tests/fails/maximum_message_size_boundary_high.stderr
error: proc macro panicked
 --> tests/fails/maximum_message_size_boundary_high.rs:4:16
  |
4 |     let size = maximum_message_size!(1048577);
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should be at most 1048576
